--- a/web/css/site.css
+++ b/web/css/site.css
@@ -89,6 +89,11 @@ a.desc:after {
     padding: 10px 20px;
     margin: 0 0 15px 0;
 }
+
+section.content .small-box {
+  cursor: pointer;
+}
+
 /*Animate CSS*/
 @charset "UTF-8";
 
